--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cloudinary": "^1.37.3",
     "mssql": "^9.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
